--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,14 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
-    </dependencies>
+
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-core</artifactId>
+			<version>3.4.10</version> <!-- Use the appropriate version -->
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
